--- a/products/templates/auth/login.html
+++ b/products/templates/auth/login.html
@@ -15,11 +15,11 @@
                             <hr>
                             <div class="form-group">
                                 <label for="">Username: </label>
-                                <input type="text">
+                                <input type="text" class="form-control" name = "username" placeholder="Enter Username">
                             </div>
                             <div class="form-group">
                                 <label for="">Password: </label>
-                                <input type="text">
+                                <input type="password" class="form-control" name = "password" placeholder="Enter Password">
                             </div>
                             <button type="submit" class="btn float-end shadow btn-success px4">Login</button>
                         </form>
