--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 {% load static %}
+
 <div class="container">
    <div class="row">
     <div class="col-md-12">
@@ -35,6 +36,8 @@
                         {% endif %}
                         <div class="row mt-2">
                             <div class="col-md-3">
+                                {% csrf_token %}
+                                <input type="hidden" value="{{ products.id }}" class="prod_id">
                                 <label for="Quantity">Quantity</label>
                                 <div class="input-group text-center mb-3" style="width:130px;">
                                     <button class="input-group-text decrement-btn">-</button>
@@ -42,10 +45,10 @@
                                     <button class="input-group-text increment-btn">+</button>
                                 </div>
                             </div>
-                            <div class="col-md-9">
+                            <div class="col-md-9 " >
                                 <br/>
                                 {% if products.quantity > 0 %}
-                                    <button type="button" class="btn btn-primary me-3 float-start">Add to Cart<i class ="fa fa-shopping-cart"></i></button>
+                                    <button type="button" class="btn btn-primary me-3 float-start addToCartButton">Add to Cart<i class ="fa fa-shopping-cart"></i></button>
                                 {% endif %}
                                     <button type="button" class="btn btn-success me-3 float-start">Add to Wishlist<i class ="fa fa-heart"></i></button>
                             </div>
@@ -64,6 +67,31 @@
     </div>
    </div>
 </div>
-
-
+<!-- I don't know why this particular piece of code does not work in the custom.js file but works here fine.-->
+<script>
+    $(document).ready(function () {
+        $('.addToCartButton').click(function (e) {
+            e.preventDefault();
+    
+            var product_id = $(this).closest('.product_data').find('.prod_id').val();
+            var product_qty = $(this).closest('.product_data').find('.qty-input').val();
+            var token = $('input[name="csrfmiddlewaretoken"]').val();
+            
+            $.ajax({
+                method: "POST",
+                url: 'http://localhost:8000/add-to-cart/',  // Full URL
+                data: {
+                    'product_id' : product_id,
+                    'product_qty' : product_qty,
+                    csrfmiddlewaretoken : token,
+                },
+                success: function (response){
+                    console.log(response)
+                    alertify.success(response.status)
+                }
+            });
+        });
+    });
+    
+</script>
 {% endblock content %}
