--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,17 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+      $(document).ready(function() {
+          console.log("jQuery loaded successfully");
+      });
+  </script>
+    <script src="{% static '/js/custom.js' %}"></script>
+    
     <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,6 +44,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/products/new">New Arrivals</a>
+          </li>
+          <li class="nav-item">
+            <a class = "nav-link active" aria-current="page" href="{% url 'cart' %}"> Cart
           </li>
           {% if request.user.is_authenticated %}
             <li class="nav-item dropdown">
@@ -77,10 +91,7 @@
 <!--        <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>-->
       </div>
     </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
+
     <!-- Alertify.js-->
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     
