--- a/templates/base.html
+++ b/templates/base.html
@@ -22,20 +22,21 @@
 
     <!-- Alertify.JS-->
     <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'navbar.css' %}">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
     <title>Hello, world!</title>
   </head>
-  <body style="background: #fdfdfd;">
+  <body style="background: #fcf4dc;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">PyShop</a>
+      <a class="navbar-brand ml-sm-2" href="/home"> <img src="{% static 'logo draft.svg'%}" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+    
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -46,7 +47,7 @@
             <a class="nav-link" href="/products/new">New Arrivals</a>
           </li>
           <li class="nav-item">
-            <a class = "nav-link active" aria-current="page" href="{% url 'cart' %}"> Cart
+            <a class="nav-link" href="{% url 'cart' %}"> Cart </a>
           </li>
           {% if request.user.is_authenticated %}
             <li class="nav-item dropdown">
@@ -54,8 +55,8 @@
                 {{ request.user }}
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Account Settings</a>
+                <a class="dropdown-item" href="#">****</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
               </div>
@@ -68,10 +69,10 @@
               <a class="nav-link" href="{% url 'register' %}">Register</a>
             </li>
           {% endif %}
-        </ul>
+        </ul>    
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="border-radius: 10px;">
+          <button class="btn my-2 my-sm-0 mr-sm-0" type="submit"> <img src="{% static 'search icon.svg' %}" class="rounded-circle" width="25" height="25"> </button>
         </form>
       </div>
     </nav>
@@ -82,23 +83,10 @@
         {% endblock %}
     </main>
 
-<<<<<<< Updated upstream
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p>PyShop is a © of <strong><a href="https://github.com/thisishaykins/">Thisishaykins</a></strong>, but please download and customize it for yourself!</p>
-<!--        <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>-->
-      </div>
-    </footer>
-
-=======
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
->>>>>>> Stashed changes
     <!-- Alertify.js-->
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     
