--- a/products/templates/auth/login.html
+++ b/products/templates/auth/login.html
@@ -22,6 +22,7 @@
                                 <input type="password" class="form-control" name = "password" placeholder="Enter Password">
                             </div>
                             <button type="submit" class="btn float-end shadow btn-success px4">Login</button>
+                            <a class = "nav-link active" aria-current="page" href="{% url 'register' %}"><i>don't have an account?</i></a>
                         </form>
                     </div>
                 </div>
