--- a/products/templates/auth/register.html
+++ b/products/templates/auth/register.html
@@ -42,6 +42,7 @@
                             {% endif %}
                             </div>
                             <button type="submit" class="btn float-end shadow btn-success px4">Register</button>
+                            <a class = "nav-link active" aria-current="page" href="{% url 'register' %}"><i>don't have an account?</i></a>
                         </form>
                     </div>
                 </div>
