--- a/products/templates/wishlist.html
+++ b/products/templates/wishlist.html
@@ -8,7 +8,8 @@
 <div class="py-3 bg-primary">
     <div class="containter">
         <a class="text-white" href = "{% url 'collections' %}">Home</a>
-        <a class="text-white" href = "{% url 'cart' %}">Cart</a>
+        <a class="text-white">/</a>
+        <a class="text-white" href = "{% url 'wishlist' %}">Wishlist</a>
     </div>
 </div>
 
@@ -19,10 +20,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card-shadow">
-                    <div class="card-body">
-                        {% if cart %}
-                            {% for item in cart %}
-                            <div class="row ">
+                    <div class="card-body wishlist_data">
+                        {% if wishlist %}
+                            {% for item in wishlist %}
+                            <div class="row product_data">
                                 <div class="col-md-2 my-auto">
                                     <img src="{{ item.product.product_image.url }}" height="70px" width='70px'alt="image here">
                                 </div>
@@ -34,25 +35,18 @@
                                 </div>
                                 <div class="col-md-3 my-auto">
                                     {% csrf_token %}
-                                    <input type="hidden" value="{{ products.id }}" class="prod_id">
-                                    {%if item.product.quantity >= item.product_qty%}
-                                        <label for="Quantity">Quantity</label>
-                                        <div class="input-group text-center mb-3" style="width:130px;">
-                                            <button class="input-group-text decrement-btn">-</button>
-                                            <input type="text" name="quantity" class="form-control qty-input text-center" value="1">
-                                            <button class="input-group-text increment-btn">+</button>
-                                        </div>
-                                    {% else %}
-                                        <h6>Out of Stock!</h6>
-                                    {% endif %}
+                                    <input type="hidden" class="prod_id" value="{{ item.product_id }}" >
+                                    <a href="{% url 'view_products' item.product.Category.slug item.product.slug%}" class="btn btn-primary">
+                                        <i class="fa fa-eye">View Product</i>
+                                    </a>
                                 </div>
                                 <div class="col-md-2 my-auto">
-                                    <button class="btn btn-danger delete-cart-item"> <i class="fa fa-trash"></i>Remove</button>
+                                    <button class="btn btn-danger delete-wishlist-item"> <i class="fa fa-trash"></i>Remove</button>
                                 </div>
                             </div>
                             {% endfor %}
                         {% else %}
-                            <h4>Your cart is empty.</h4>
+                            <h4>Your Wishlist is Empty.</h4>
                         {% endif %}
                     </div>
                 </div>
@@ -63,24 +57,22 @@
 <!-- I don't know why this particular piece of code does not work in the custom.js file but works here fine.-->
 <script>
     $(document).ready(function () {
-        $('.addToCartButton').click(function (e) {
+        $(document).on('click', '.delete-wishlist-item', function(e) {
             e.preventDefault();
-    
             var product_id = $(this).closest('.product_data').find('.prod_id').val();
-            var product_qty = $(this).closest('.product_data').find('.qty-input').val();
             var token = $('input[name="csrfmiddlewaretoken"]').val();
             
             $.ajax({
                 method: "POST",
-                url: 'http://localhost:8000/add-to-cart/',  // Full URL
+                url: 'http://localhost:8000/delete-wishlist-item/',  // Full URL
                 data: {
                     'product_id' : product_id,
-                    'product_qty' : product_qty,
                     csrfmiddlewaretoken : token,
                 },
                 success: function (response){
                     console.log(response)
                     alertify.success(response.status)
+                    $('.wishlist_data').load(location.href + " .wishlist_data");
                 }
             });
         });
