--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
     <title>Hello, world!</title>
   </head>
-  <body style="background: #fcf4dc;">
+  <body style="background: #ffffff;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand ml-sm-2" href="/home"> <img src="{% static 'logo draft.svg'%}" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,9 +42,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == "collections" %}active{%endif%}" href="{% url 'collections'%}">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/products/new">New Arrivals</a>
           </li>
           <li class="nav-item">
             <a class = "nav-link {% if request.resolver_match.url_name == "cart" %}active{%endif%}" aria-current="page" href="{% url 'cart' %}"> Cart</a>
