--- a/products/templates/auth/login.html
+++ b/products/templates/auth/login.html
@@ -15,13 +15,13 @@
                             <hr>
                             <div class="form-group">
                                 <label for="">Username: </label>
-                                <input type="text" class="form-control" name = "username" placeholder="Enter Username">
+                                <input type="text" class="form-control" name = "username" placeholder="Enter Username" style="border-radius: 10px;">
                             </div>
                             <div class="form-group">
                                 <label for="">Password: </label>
-                                <input type="password" class="form-control" name = "password" placeholder="Enter Password">
+                                <input type="password" class="form-control" name = "password" placeholder="Enter Password" style="border-radius: 10px;">
                             </div>
-                            <button type="submit" class="btn float-end shadow btn-success px4">Login</button>
+                            <button type="submit" class="btn float-end shadow" style="background-color: #DC93FF; color: white; border-color: #DC93FF; border-radius: 15px; padding: 6px 12px;">Login</button>
                             <a class = "nav-link active" aria-current="page" href="{% url 'register' %}"><i>don't have an account?</i></a>
                         </form>
                     </div>
