--- a/products/templates/auth/register.html
+++ b/products/templates/auth/register.html
@@ -10,38 +10,38 @@
                         <form action="" method="POST">
                             {% csrf_token %}
                             <div class="text-center">
-                                <h4>Registration Form</h4>
+                                <h4>Create an Account</h4>
                             </div>
                             <hr>
                             <div class="form-group">
                                 <label for="">Username: </label>
-                                {{form.username}}
+                                <input type="text" class="form-control" name = "username" placeholder="Enter Username" style="border-radius: 10px;">
                                 {% if form.errors.username %}
                                     <label class="text-danger">{{form.errors.username}}</label>
                                 {% endif %}
                             </div>
                             <div class="form-group">
                                 <label for="">Email: </label>
-                                {{form.email}}
+                                <input type="text" class="form-control" name = "email" placeholder="Enter Email" style="border-radius: 10px;">
                                 {% if form.errors.email %}
                                 <label class="text-danger">{{form.errors.email}}</label>
                             {% endif %}
                             </div>
                             <div class="form-group">
                                 <label for="">Password: </label>
-                                {{form.password1}}
+                                <input type="text" class="form-control" name = "password1" placeholder="Enter Password" style="border-radius: 10px;">
                                 {% if form.errors.password1 %}
                                 <label class="text-danger">{{form.errors.password1}}</label>
                             {% endif %}
                             </div>
                             <div class="form-group">
                                 <label for="">Confirm Password: </label>
-                                {{form.password2}}
+                                <input type="text" class="form-control" name = "password2" placeholder="Confirm Password" style="border-radius: 10px;">
                                 {% if form.errors.password2 %}
                                 <label class="text-danger">{{form.errors.password2}}</label>
                             {% endif %}
                             </div>
-                            <button type="submit" class="btn float-end shadow btn-success px4">Register</button>
+                            <button type="submit" class="btn float-end shadow" style="background-color: #DC93FF; color: white; border-color: #DC93FF; border-radius: 15px; padding: 6px 12px;">Register</button>
                             <a class = "nav-link active" aria-current="page" href="{% url 'register' %}"><i>don't have an account?</i></a>
                         </form>
                     </div>
