--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -71,6 +71,33 @@
 <!-- I don't know why this particular piece of code does not work in the custom.js file but works here fine.-->
 <script>
     $(document).ready(function () {
+        console.log("Jquery loaded successfully")
+        $('.increment-btn').click(function (e) {
+            e.preventDefault();
+
+            var inc_value = $(this).closest('.product_data').find('.qty-input');
+            var value = parseInt(inc_value.val(), 10);
+            value = isNaN(value) ? 0 : value;
+
+            if (value < 10) {
+                value = value + 1;
+                inc_value.val(value);
+            }
+        });
+
+        $('.decrement-btn').click(function (e) {
+            e.preventDefault();
+
+            var inc_value = $(this).closest('.product_data').find('.qty-input');
+            var value = parseInt(inc_value.val(), 10);
+            value = isNaN(value) ? 0 : value;
+
+            if (value > 0) { // Change the condition to value > 0 to prevent decrementing below zero
+                value = value -1;
+                inc_value.val(value);
+            }
+        });
+
         $('.addToCartButton').click(function (e) {
             e.preventDefault();
     
