Fixed Javascript functions on cart.html
fixed update-cart function not working properly.

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,13 @@
 <html lang="en">
   <head>
 
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
+    <!-- Alertify.js-->
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     <script>
       $(document).ready(function() {
           console.log("jQuery loaded successfully");
@@ -22,7 +26,7 @@
 
     <!-- Alertify.JS-->
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'navbar.css' %}">
+    <link rel="stylesheet" href="{% static '/js/navbar.css' %}">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
@@ -83,12 +87,7 @@
         {% endblock %}
     </main>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
-    <!-- Alertify.js-->
-    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+
     
     <!--The code might have the red underlines but rest assured it is working as intended-->
     <script>
