Added Personal Info on User, Added Order System
Account info and Order system on database.

--- a/products/templates/checkout.html
+++ b/products/templates/checkout.html
@@ -14,96 +14,96 @@
 </div>
 
 <div class="container mt-3">
-    <div class="row">
-        <div class="col-md-7">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h6>Basic Details</h6>
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-6">
-                        <label>First Name</label>
-                        <input type="text" class="form-control" placeholder="Enter First Name">
-                        </div>
-                        <div class="col-md-6">
-                            <label>Last Name</label>
-                            <input type="text" class="form-control" placeholder="Enter Last Name">
-                        </div>
-                        <div class="col-md-6 mt-2">
-                            <label>Email</label>
-                            <input type="email" class="form-control" placeholder="Enter Email Address">
-                        </div>
-                        <div class="col-md-6 mt-2">
-                            <label>Phone Number</label>
-                            <input type="text" class="form-control" placeholder="Enter Phone Number">
-                        </div>
-                        <div class="col-md-12 mt-2">
-                            <label>Address</label>
-                            <input type="text" class="form-control" placeholder="Enter Address">
-                        </div>
-                        <div class="col-md-6 mt-2">
-                            <label>Province</label>
-                            <input type="text" class="form-control" placeholder="Enter Province">
-                        </div>
-                        <div class="col-md-6 mt-2">
-                            <label>City</label>
-                            <input type="text" class="form-control" placeholder="Enter City">
-                        </div>
-                        <div class="col-md-6 mt-2">
-                            <label>Phone Number</label>
-                            <input type="text" class="form-control" placeholder="Enter County">
-                        </div>
-                        <div class="col-md-6 mt-2">
-                            <label>ZIP Code</label>
-                            <input type="text" class="form-control" placeholder="Enter ZIP code">
-                        </div>
-                    </div>                    
+    <form action="{% url 'placeholder' %}" method="POST">
+        {% csrf_token %}
+        <div class="row">
+            <div class="col-md-7">
+                <div class="card shadow checkout-form">
+                    <div class="card-body">
+                        <h6>Basic Details</h6>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-6">
+                            <label>First Name</label>
+                            <input type="text" required class="form-control" name="fname" placeholder="Enter First Name">
+                            </div>
+                            <div class="col-md-6">
+                                <label>Last Name</label>
+                                <input type="text" required class="form-control" name="lname" placeholder="Enter Last Name">
+                            </div>
+                            <div class="col-md-6 mt-2">
+                                <label>Email</label>
+                                <input type="email"  required class="form-control" name="email" placeholder="Enter Email Address">
+                            </div>
+                            <div class="col-md-6 mt-2">
+                                <label>Phone Number</label>
+                                <input type="text" required class="form-control" name="phonenumber" placeholder="Enter Phone Number">
+                            </div>
+                            <div class="col-md-12 mt-2">
+                                <label>Address</label>
+                                <input type="text" required class="form-control" name="address" placeholder="Enter Address">
+                            </div>
+                            <div class="col-md-6 mt-2">
+                                <label>Province</label>
+                                <input type="text" required class="form-control" name="province" placeholder="Enter Province">
+                            </div>
+                            <div class="col-md-6 mt-2">
+                                <label>City</label>
+                                <input type="text" required class="form-control" name="city" placeholder="Enter City">
+                            </div>
+                            <div class="col-md-6 mt-2">
+                                <label>ZIP Code</label>
+                                <input type="text" required class="form-control" name="zipcode" placeholder="Enter ZIP code">
+                            </div>
+                        </div>                    
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-5">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h6>Order Summary </h6>
-                    <hr>
-                    {% if cart_items %}
-                        <table class="table table-striped table-bordereds">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Quantity</th>
-                                    <th>Price</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in cart_items %}
+            <div class="col-md-5">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h6>Order Summary </h6>
+                        <hr>
+                        {% if cart_items %}
+                            <table class="table table-striped table-bordereds">
+                                <thead>
                                     <tr>
-                                        <td>
-                                            <img src="{{ item.product.product_image.url }}" height="50px" width="50px" class="me-2">
-                                            {{ item.product.name }}
-                                        </td>
-                                        <td>{{ item.product_qty }}</td>
-                                        <td>{{ item.product.selling_price | stringformat:'.2f' }} USD</td>
+                                        <th>Name</th>
+                                        <th>Quantity</th>
+                                        <th>Price</th>
                                     </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                        <h6>Total Amount
-                            <span class="float-end">{{ total_price | stringformat:'.2f'}} USD</span>
-                        </h6>
-                        <div class="mt-3">
-                            <a href="#" class="btn btn-success w-100"> COD | Place Order</a>
-                        </div>
-                        <div class="mt-3">
-                            <a href="#" class="btn btn-success w-100"> COD | Paypal</a>
-                        </div>
-                    {% else %}
-                        <h4>Your Cart is Empty, pleash shop first!</h4>
-                    {% endif %}
+                                </thead>
+                                <tbody>
+                                    {% for item in cart_items %}
+                                        <tr>
+                                            <td>
+                                                <img src="{{ item.product.product_image.url }}" height="50px" width="50px" class="me-2">
+                                                {{ item.product.name }}
+                                            </td>
+                                            <td>{{ item.product_qty }}</td>
+                                            <td>{{ item.product.selling_price | stringformat:'.2f' }} USD</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                            <h6 class"fw-bold">Total Amount
+                                <span class="float-end">{{ total_price | stringformat:'.2f'}} USD</span>
+                            </h6>
+                            <input type = "hidden" value="COD" name="payment_mode">
+                            <div class="mt-3">
+                                <button type="submit" class="btn btn-success w-100"> Cash on Delivery</button>
+                            </div>
+                            <div class="mt-3">
+                                <button type="submit" class="btn btn-success w-100"> G-Cash </button>
+                            </div>
+                        {% else %}
+                            <h4>Your Cart is Empty, pleash shop first!</h4>
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
+            </div>  
         </div>
-    </div>
+    </form>
 </div>
 
 
