--- a/products/templates/cart.html
+++ b/products/templates/cart.html
@@ -52,7 +52,7 @@
                                 </div>
                             </div>
                             {% endfor %}
-                            <a href="{% url 'checkout' %}" class="btn btn-outline-success">Checkout</a>
+                            <a href="{% url 'checkout' %}" class="btn btn-outline-success float-end">Checkout</a>
                         {% else %}
                             <h4>Your Cart is Empty.</h4>
                         {% endif %}
