changes in homepage

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -41,20 +41,33 @@
   <div class="container mt-4">
     <h2 class="mb-4">Shop by Category</h2>
     <div class="row">
-      <div class="col-sm-3">
-        <a href="#">Albums</a>
-      </div>
-      <div class="col-sm-3">
-        <a href="#">Photocards</a>
-      </div>
-      <div class="col-sm-3">
-        <a href="#">LightSticks</a>
-      </div>
-      <div class="col-sm-3">
-        <a href="#">Miscellaneous Merch</a>
-      </div>
+        <div class="col-sm-3">
+          <a href="Albums">
+            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
+              <!--image and label-->
+            </div>
+        </div>
+        <div class="col-sm-3">
+          <a href="Photocards">
+            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
+              <!--image and label-->
+            </div>
+          </div>
+        <div class="col-sm-3">
+          <a href="Lightsticks">
+            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
+              <!--image and label-->
+            </div>
+        </div>
+        <div class="col-sm-3">
+          <a href="Other Merch">
+            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 50px 6px rgba(243, 194, 255, 1.75);">
+              <!--image and label-->
+            </div>
+          </a>
+          </div>
       <!-- Add more categories as needed -->
+      </div>
     </div>
-  </div>
 
 {% endblock content %}
