--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
-    <title>Hello, world!</title>
+    <title>A2K: One Stop K-Shop</title>
   </head>
   <body style="background: #ffffff;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
