minor changes on home (categories)

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -60,14 +60,21 @@
             </div>
         </div>
         <div class="col-sm-3">
-          <a href="Other Merch">
-            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 50px 6px rgba(243, 194, 255, 1.75);">
+          <a href="Seasons Greeting">
+            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
               <!--image and label-->
             </div>
           </a>
           </div>
+          <div class="col-sm-3">
+            <a href="Other Merch">
+              <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
+                <!--image and label-->
+              </div>
+            </a>
       <!-- Add more categories as needed -->
       </div>
     </div>
+  </div>
 
 {% endblock content %}
