--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -13,19 +13,19 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100 h-100vh" src="{% static 'nj hp.jpg' %}" alt="First slide">
+        <img class="d-block w-100 h-100vh" src="{% static 'nj hp.svg' %}" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static 'twice hp.jpg' %}" alt="Second slide">
+        <img class="d-block w-100 h-100vh" src="{% static '2hp.svg' %}" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static 'NJ.jpg' %}" alt="Third slide">
+        <img class="d-block w-100 h-100vh" src="{% static '3hp.svg' %}" alt="Third slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static 'NJ.jpg' %}" alt="Fourth slide">
+        <img class="d-block w-100 h-100vh" src="{% static '4hp.svg' %}" alt="Fourth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static 'twice hp.jpg' %}" alt="Fifth slide">
+        <img class="d-block w-100 h-100vh" src="{% static '5hp.svg' %}" alt="Fifth slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -38,41 +38,45 @@
     </a>
   </div>
 
-  <div class="container mt-4">
-    <h2 class="mb-4">Shop by Category</h2>
-    <div class="row">
-        <div class="col-sm-3">
+  <div class="container my-4">
+    <h2 class="my-4">Shop by Category</h2>
+    <div class="row mt-4 d-flex justify-content-between">
+        <div class="col-sm-3 my-4 mx-4">
           <a href="Albums">
-            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
-              <!--image and label-->
+            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+              <img src="{% static 'Albums.png'%}">
+              <p style="text-align: center; margin-top: 10px; font-weight: bold;">Albums</p>
             </div>
         </div>
-        <div class="col-sm-3">
-          <a href="Photocards">
-            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
-              <!--image and label-->
+        <div class="col-sm-3 my-4 mx-4">
+          <a href="Photobooks">
+            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+              <img src="{% static 'Photobooks.png'%}">
+              <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Photobooks</p>
             </div>
           </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 my-4 mx-4">
           <a href="Lightsticks">
-            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
-              <!--image and label-->
+            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+              <img src="{% static 'Lightsticks.png'%}">
+              <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Lightsticks</p>
             </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 my-4 mx-4">
           <a href="Seasons Greeting">
-            <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
-              <!--image and label-->
+            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+              <img src="{% static 'Seasons Greetings.png'%}">
+              <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Season's Greetings</p>
             </div>
           </a>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 my-4 mx-4">
             <a href="Other Merch">
-              <div class="card-body" style="width: 200px; height: 250px; border-radius: 15px; background:#FFF; box-shadow:0px 0px 75px 6px rgba(243, 194, 255, 1.75);">
-                <!--image and label-->
+              <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+                <img src="{% static 'Other Merch.png'%}">
+                <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Other Merch</p>
               </div>
             </a>
-      <!-- Add more categories as needed -->
       </div>
     </div>
   </div>
