Fix javascript on views.html
fasgagsd

--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -113,6 +113,26 @@
 <!-- JavaScript code -->
 <script>
     $(document).ready(function () {
+        $('.increment-btn').click(function (e) {
+            e.preventDefault();
+            var inc_value = $(this).closest('.product_data').find('.qty-input');
+            var value = parseInt(inc_value.val(), 10);
+            value = isNaN(value) ? 0 : value;
+            if (value < 10) {
+                value = value + 1;
+                inc_value.val(value);
+            }
+        });
+        $('.decrement-btn').click(function (e) {
+            e.preventDefault();
+            var inc_value = $(this).closest('.product_data').find('.qty-input');
+            var value = parseInt(inc_value.val(), 10);
+            value = isNaN(value) ? 0 : value;
+            if (value > 0) { // Change the condition to value > 0 to prevent decrementing below zero
+                value = value -1;
+                inc_value.val(value);
+            }
+        });
         $('.addToCartButton').click(function (e) {
             e.preventDefault();
     
