--- a/products/templates/auth/register.html
+++ b/products/templates/auth/register.html
@@ -29,14 +29,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="">Password: </label>
-                                <input type="text" class="form-control" name = "password1" placeholder="Enter Password" style="border-radius: 10px;">
+                                <input type="password" class="form-control" name = "password1" placeholder="Enter Password" style="border-radius: 10px;">
                                 {% if form.errors.password1 %}
                                 <label class="text-danger">{{form.errors.password1}}</label>
                             {% endif %}
                             </div>
                             <div class="form-group">
                                 <label for="">Confirm Password: </label>
-                                <input type="text" class="form-control" name = "password2" placeholder="Confirm Password" style="border-radius: 10px;">
+                                <input type="password" class="form-control" name = "password2" placeholder="Confirm Password" style="border-radius: 10px;">
                                 {% if form.errors.password2 %}
                                 <label class="text-danger">{{form.errors.password2}}</label>
                             {% endif %}
