--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,8 @@
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == "home" %}active{%endif%}" href="{% url 'home'%}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == "collections" %}active{%endif%}" href="{% url 'collections'%}">Shop</a>
