--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -95,11 +95,12 @@
                                 </div>
                             </div>
                             <div class="col-md-9 " >
+
                                 <br/>
                                 {% if products.quantity > 0 %}
-                                    <button type="button" class="btn btn-primary me-3 float-start addToCartButton">Add to Cart<i class ="fa fa-shopping-cart"></i></button>
+                                    <button type="button" class="btn btn-primary me-3 float-start addToCartButton">Add to Cart</button>
                                 {% endif %}
-                                    <button type="button" class="btn btn-success me-3 float-start addToWishlist">Add to Wishlist<i class ="fa fa-heart"></i></button>
+                                    <button type="button" class="btn btn-success me-3 float-start addToWishlist">Add to Wishlist</button>
                             </div>
                         </div>
                     </div>
@@ -141,17 +142,22 @@
             var token = $('input[name="csrfmiddlewaretoken"]').val();
             
             $.ajax({
-                method: "POST",
                 url: 'http://localhost:8000/add-to-cart/',  // Full URL
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
                 data: {
                     'product_id' : product_id,
                     'product_qty' : product_qty,
                     csrfmiddlewaretoken : token,
                 },
+                type: "POST",
+                dataType: "json",
                 success: function (response){
                     console.log(response)
                     alertify.success(response.status)
                 }
+                
             });
         });
         $('.addToWishlist').click(function (e) {
