--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -12,6 +12,7 @@
         border-radius: 10px;
         margin-bottom: 20px;
         transition: box-shadow 0.3s ease;
+        width: 100%;
     }
 
     .card:hover {
@@ -20,8 +21,9 @@
     }
 
     .category-image img {
-        max-width: 100%;
-        height: auto;
+        width: 100%; /* Stretch the image to fit the card */
+        height: 100%; /* Stretch the image to fit the card */
+        object-fit: cover; /* Maintain aspect ratio and cover the entire container */
         border-radius: 10px;
     }
 
@@ -70,7 +72,12 @@
                     <a href="{% url 'view_products' item.Category.slug item.slug %}">
                         <div class="card-body">
                             <div class="category-image">
-                                <img src="{{ item.product_image.url }}" alt="product-image" class="w-100" />
+                                {% load static %}
+                                {% if item.product_image %}
+                                    <img src="{{ item.product_image.url }}" alt="product-image" class="w-100" />
+                                {% else %}
+                                    <img src="{% static 'NIP.png' %}" alt="default-image" class="w-100" />
+                                {% endif %}
                             </div>
                             <h4>{{item.name}}</h4>
                             <span>{{item.selling_price}}</span>
