--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -63,7 +63,11 @@
                         {% if products.tag %}
                             <label class="product_viewtag"> {{products.tag}}</label>
                         {% endif %}
-                        <img src="{{ products.product_image.url }}" class="w-100" alt="image">
+                        {% if products.product_image %}:
+                            <img src="{{ products.product_image.url }}" class="w-100" alt="image">
+                        {% else %}:
+                            <img src="{% static 'NIP.png' %}" class="w-100" alt="image">
+                        {% endif %}
                     </div>
                     <div class="col-md-8">
                         <h2 class="mb-0">
