--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 <!doctype html>
+
 <html lang="en">
   <head>
 
@@ -14,7 +15,6 @@
           console.log("jQuery loaded successfully");
       });
   </script>
-    <script src="{% static '/js/custom.js' %}"></script>
     
     <!-- Required meta tags -->
     <meta charset="UTF-8">
@@ -77,6 +77,7 @@
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="border-radius: 10px;">
           <button class="btn my-2 my-sm-0 mr-sm-0" type="submit"> <img src="{% static 'search icon.svg' %}" class="rounded-circle" width="25" height="25"> </button>
         </form>
+        <button class="btn my-2 my-sm-0 mr-sm-0 " type="button"> <img src="{% static 'light-mode.svg' %}" class="rounded-circle svg-mode" width="18" height= "18"/></button>
       </div>
     </nav>
 
