--- a/templates/base.html
+++ b/templates/base.html
@@ -59,9 +59,11 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Account Settings</a>
+                <a class="dropdown-item" href="{% url 'myorders' %}">View Orders</a>
                 <a class="dropdown-item" href="#">****</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                
               </div>
             </li>
           {% else %}
