Fixed the displaying of Timezone from UTC to PH timezone
Note: Change the static root path again as the settings.py is going to be affected by the push.

--- a/products/templates/orders/index.html
+++ b/products/templates/orders/index.html
@@ -35,7 +35,7 @@
                                 <tbody>
                                     {% for item in orders %}
                                         <tr>
-                                            <td>{{ item.created_at }}</td>
+                                            <td>{{ item.formatted_timestamp }}</td>
                                             <td>{{ item.tracking_number }}</td>
                                             <td>{{ item.total_price }}</td>
                                             <td>{{ item.status }}</td>
